
Mon Dec  6 20:12:00 PST 1999
(Mandrake)

changed this to be 0.16.4

-------------------------------------------------------------------------------

Wed Dec  8 10:16:21 PST 1999
(Mandrake)

fixed a typo in INSTALL pointed out by Peter Kjellerstedt
<peter.kjellerstedt@axis.com>

-------------------------------------------------------------------------------

Wed Dec  8 10:31:47 PST 1999
(Mandrake)

upped esound requirement to 0.2.17 due to security fix

-------------------------------------------------------------------------------

Fri Dec 10 11:09:41 PST 1999
(KainX)

i18n patch and other fixes from Peter Kjellerstedt
<peter.kjellerstedt@axis.com>.

-------------------------------------------------------------------------------

Tue Dec 21 11:07:46 PST 1999
(Mandrake)

added support for freetype in regular location OR in freetype/ subdirectory
(like the new versions)

-------------------------------------------------------------------------------

Tue Dec 21 15:15:53 PST 1999
(Mandrake)

added gettext check to autogen.sh

-------------------------------------------------------------------------------

Wed Jan  5 00:05:04 CET 2000
(Saur)

Added en_US (American English) to the list of localized languages.

-------------------------------------------------------------------------------

Wed Jan  5 11:16:26 PST 2000
(Mandrake)

added patch from Alexandre David <adavid@DoCS.UU.SE> for KDE menu generation
fixes

-------------------------------------------------------------------------------

Wed Feb 16 11:32:52 PST 2000
(Mandrake)

added tr.po

-------------------------------------------------------------------------------

Thu Feb 17 11:02:30 PST 2000
(Mandrake)

patch from Bob Arendt <rdarendt@cwcom.net> to fix a problem in eesh with tru64

-------------------------------------------------------------------------------

Thu Feb 17 11:11:46 PST 2000
(Mandrake)

removed some warnings, still a few left in dox/file.c