@@ -34,33 +34,33 @@ if [ $# -lt 1 ]; then
 fi
 
 if [ $1 = "all" ]; then
-  rm -rf $HOME/.enlightenment/cached/bgsel/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/bgsel/.* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/cfg/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/cfg/.* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/pager/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/pager/.* >& /dev/null
+  rm -rf $ECACHEDIR/bgsel/* >& /dev/null
+  rm -rf $ECACHEDIR/bgsel/.* >& /dev/null
+  rm -rf $ECACHEDIR/cfg/* >& /dev/null
+  rm -rf $ECACHEDIR/cfg/.* >& /dev/null
+  rm -rf $ECACHEDIR/pager/* >& /dev/null
+  rm -rf $ECACHEDIR/pager/.* >& /dev/null
   eesh -e "dialog_ok All caches purged."
   exit
 fi
 
 if [ $1 = "pager" ]; then
-  rm -rf $HOME/.enlightenment/cached/pager/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/pager/.* >& /dev/null
+  rm -rf $ECACHEDIR/pager/* >& /dev/null
+  rm -rf $ECACHEDIR/pager/.* >& /dev/null
   eesh -e "dialog_ok Pager background cache purged."
   exit
 fi
 
 if [ $1 = "config" ]; then
-  rm -rf $HOME/.enlightenment/cached/cfg/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/cfg/.* >& /dev/null
+  rm -rf $ECACHEDIR/cfg/* >& /dev/null
+  rm -rf $ECACHEDIR/cfg/.* >& /dev/null
   eesh -e "dialog_ok Config file cache purged."
   exit
 fi
 
 if [ $1 = "bgsel" ]; then
-  rm -rf $HOME/.enlightenment/cached/bgsel/* >& /dev/null
-  rm -rf $HOME/.enlightenment/cached/bgsel/.* >& /dev/null
+  rm -rf $ECACHEDIR/bgsel/* >& /dev/null
+  rm -rf $ECACHEDIR/bgsel/.* >& /dev/null
   eesh -e "dialog_ok Background selector cache purged."
   exit
 fi
