@@ -34,7 +34,7 @@ if [ $# -lt 1 ]; then
 fi
 
 if [ $1 = "all" ]; then
-  VAL=`du -s $HOME/.enlightenment/cached/pager $HOME/.enlightenment/cached/bgsel $HOME/.enlightenment/cached/cfg | awk '{printf("%s ", $1);}'`
+  VAL=`du -s $ECACHEDIR/cached/pager $ECACHEDIR/cached/bgsel $ECACHEDIR/cached/cfg | awk '{printf("%s ", $1);}'`
   TOT=0
   for I in $VAL; do
     TOT=$[ $TOT + $I ];
@@ -44,19 +44,19 @@ if [ $1 = "all" ]; then
 fi
 
 if [ $1 = "pager" ]; then
-  VAL=`du -s $HOME/.enlightenment/cached/pager | awk '{printf("%s", $1);}'`
+  VAL=`du -s $ECACHEDIR/cached/pager | awk '{printf("%s", $1);}'`
   eesh -e "dialog_ok Your pager background cache is using $VAL Kb of disk space."
   exit
 fi
 
 if [ $1 = "config" ]; then
-  VAL=`du -s $HOME/.enlightenment/cached/cfg | awk '{printf("%s", $1);}'`
+  VAL=`du -s $ECACHEDIR/cached/cfg | awk '{printf("%s", $1);}'`
   eesh -e "dialog_ok Your config file cache is using $VAL Kb of disk space."
   exit
 fi
 
 if [ $1 = "bgsel" ]; then
-  VAL=`du -s $HOME/.enlightenment/cached/bgsel | awk '{printf("%s", $1);}'`
+  VAL=`du -s $ECACHEDIR/cached/bgsel | awk '{printf("%s", $1);}'`
   eesh -e "dialog_ok Your background selector cache is using $VAL Kb of disk space."
   exit
 fi
