@@ -2400,8 +2400,8 @@ void                ModifyCMClass(char *name,
 				  int rnum, unsigned char *rpx,
 				  unsigned char *rpy, int gnum,
 				  unsigned char *gpx, unsigned char *gpy,
-
 				  int bnum, unsigned char *bpx,
+
 				  unsigned char *bpy);
 
 /* config.c functions */
@@ -2528,8 +2528,8 @@ Iconbox            *SelectIconboxForEwin(EWin * ewin);
 /* slideouts.c functions */
 void                SlideWindowSizeTo(Window win, int fx, int fy,
 				      int tx, int ty,
-
 				      int fw, int fh, int tw, int th,
+
 				      int speed);
 Slideout           *CreateSlideout(char *name, char dir);
 void                ShowSlideout(Slideout * s, Window win);
