@@ -1081,8 +1081,8 @@ DialogRealizeItem(Dialog * d, DItem * di)
 		  ImlibImage         *im;
 
 		  im =
-		     ELoadImage(di->item.slider.ic_border->norm.
-				normal->im_file);
+		     ELoadImage(di->item.slider.ic_border->norm.normal->
+				im_file);
 		  if (im)
 		    {
 		       di->item.slider.border_orig_w = im->rgb_width;
@@ -1358,10 +1358,10 @@ DialogRealizeItem(Dialog * d, DItem * di)
 					       ((dii->h -
 						 dii->item.check_button.
 						 check_orig_h) / 2),
-					       dii->item.
-					       check_button.check_orig_w,
-					       dii->item.
-					       check_button.check_orig_h);
+					       dii->item.check_button.
+					       check_orig_w,
+					       dii->item.check_button.
+					       check_orig_h);
 			  if (dii->type == DITEM_RADIOBUTTON)
 			     EMoveResizeWindow(disp,
 					       dii->item.radio_button.radio_win,
@@ -1369,10 +1369,10 @@ DialogRealizeItem(Dialog * d, DItem * di)
 					       ((dii->h -
 						 dii->item.radio_button.
 						 radio_orig_h) / 2),
-					       dii->item.
-					       radio_button.radio_orig_w,
-					       dii->item.
-					       radio_button.radio_orig_h);
+					       dii->item.radio_button.
+					       radio_orig_w,
+					       dii->item.radio_button.
+					       radio_orig_h);
 			  if (dii->type == DITEM_AREA)
 			    {
 			       dii->item.area.w = dii->w -
